# purohit

./: .gitignore  README.md  conda-environment.yml  monitor-requirements.txt  pyproject.toml  requirements-test.txt
.github/: pull_request_template.md
docs/: cgi-command-ingress.md  cgi-mailbox-drain.md  collaborative-assignments.md  dag-details.md  input-staging.md  pyring-manifest-control-plane.md  remote-event-import.md  staging.md  static-manager.md  static-webdir-monitor.md  tunnel-manager.md  web-monitor.md
nbs/: gwtc5.ipynb
reanalyze/: assignments.py  cgi_command.py  cgi_mailbox.py  control_queue.py  controlled_static_monitor.py  event_details.py  host_profiles.py  input_staging.py  manager_health.py  manifest_workflow.py  output_products.py  project_init.py  reanalyze.py  remote_import.py  remote_import_cli.py  static_mailbox_manager.py  static_manager.py  static_monitor.py  tmp_probe_staging.py  tunnel_manager.py  tunnel_static_webdir.py  tunnel_webapp.py  utils.py  web_monitor.py
scripts/: approved_runs.json  check.sh  create_token.sh  find_cgiwrite.sh  get_jobs_status.py  hosts.yaml  import_remote_events.py  init_env.sh  init_project.py  init_project.sh  init_pyring_ce_stm_test_jobs.sh  install_cgi_command_ingress.py  install_cgi_mailbox_ingress.py  launch_monitor.sh  mailbox.sh  open_laptop_tunnel.sh  publish_controlled_web_monitor.py  publish_web_monitor.py  run_central_manager.py  run_static_manager.py  run_static_manager.sh  run_static_manager_with_cgi.py  run_static_manager_with_mailbox.py  run_tunnel_manager.py  run_tunnel_manager.sh  run_web_monitor.py  start_cluster_manager.sh  submit_one_job.py  (+13 more)
(+15 files in other folders)
